packages/webassemblyjs/test/fixtures/type-errors/wrong-set-local/module.wast
(module
	(func (param f32)
		(local i32)
		(set_local 1)
	)
)
